<resources>
    <string name="local_service_started">Service Started</string>
    <string name="local_service_stopped">Service Stopped</string>
    <string name="local_service_label">Service Label</string>
    <string name="notification_medicine_taken">Taken</string>
    <string name="notification_remind">Remind Later</string>
    <string name="notification_upload_results">Save Doc</string>
    <string name="notification_dismiss">Dismiss</string>
    <string name="notification_completed_others">Completed</string>
    <string name="loginMessage">we are validating your identity....</string>
    <string name="loginFailureMessage">wrong credentials were given</string>
    <string name="email_registered_with_us_is_mandatory">please enter the email-id registered with us</string>
    <string name="forgotPasswordTaskMessage">about to mail you auto generated password....</string>
    <string name="forgotPasswordTaskSuccess">mailed you auto generated password</string>
    <string name="forgotPasswordTaskFailure">there was some problem in mailing you, please try again later</string>
    <string name="changePasswordTitle">Change Password</string>
    <string name="change">Change</string>
    <string name="oldPasswordMandatory">old password is mandatory</string>
    <string name="newPasswordMandatory">new password is mandatory</string>
    <string name="confirmNewPasswordMandatory">confirm the new password</string>
    <string name="newPasswordsDoNotMatch">new passwords do not match</string>
    <string name="apiSentError">Action was not completed. Please try again later.</string>
    <string name="networkNotAvailable">Network not availble. Please check your internet connection and then try again.</string>
    <string name="none">None</string>
    <string name="changePassword">Change Password</string>
    <string name="app_name">ViamHealth</string>
    <string name="menu_settings">Logout</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home_option">Home_option</string>
    <string name="title_activity_auto_option">Auto_option</string>
    <string name="title_activity_life__option">Life_Option</string>
    <string name="title_activity_life_option">Life_option</string>
    <string name="title_activity_commercial_option">Commercial_option</string>
    <string name="title_activity_goal">Goal</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_invite_user">InviteUser</string>
    <string name="title_activity_add_goal">AddGoal</string>
    <string name="title_activity_add_new_value">AddNewValue</string>
    <string name="title_activity_data_picker_fragment">DataPickerFragment</string>
    <string name="title_activity_add_profile">AddProfile</string>
    <string name="title_activity_file">File</string>
    <string name="title_activity_food_diary">FoodDiary</string>
    <string name="medical_conidtion_obese">Weight</string>
    <string name="medical_conidtion_bp">Blood Pressure</string>
    <string name="medical_conidtion_diabetes">Diabetes</string>
    <string name="medical_conidtion_cholesterol">Cholesterol</string>
    <string name="selected">selected</string>
    <string name="inviteUser">Invite User</string>
    <string name="editDelete">Edit</string>
    <string name="toc">Terms of Use</string>
    <string-array name="goal_name_array">
        <item>Blood Sugar</item>
        <item>Blood Presure</item>
        <item>Weight</item>
        <item>Cholestrol</item>
    </string-array>
    <string-array name="goal_info_array">
        <item>Lower</item>
        <item>Medium</item>
        <item>Higher</item>
    </string-array>
    <string-array name="goal_time_array">
        <item>1 Weeks</item>
        <item>2 Weeks</item>
        <item>3 Weeks</item>
        <item>4 Weeks</item>
        <item>5 Weeks</item>
        <item>6 Weeks</item>
    </string-array>
    <string-array name="reminder_types">
        <item>Medicine</item>
        <item>Rest all</item>
    </string-array>
    <string-array name="duration_type">
        <item>Days</item>
        <item>Weeks</item>
        <item>Months</item>
        <item>Years</item>
    </string-array>
    <string name="tab_label_medicines">Medicines</string>
    <string name="tab_label_others">Others</string>
    <string name="title_activity_add_breakfast">AddBreakfast</string>
    <string name="title_activity_tab_group_reminder">TabGroupReminder</string>
    <string name="title_activity_reminder">Reminder</string>
    <string name="title_activity_tab_group_settings">TabGroupSettings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_view_more_notes">ViewMoreNotes</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_display_image">DisplayImage</string>
    <string name="title_activity_downlaod">Downlaod</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_add_reminder">AddReminder</string>
    <string name="title_activity_watch">Watch</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_glucose_goal">AddGlucoseGoal</string>
    <string name="title_activity_add_cholesterol_goal">AddCholesterolGoal</string>
    <string name="title_activity_add_bpgoal">AddBPGoal</string>
    <string name="title_activity_add_cholesterol_value">AddCholesterolValue</string>
    <string name="title_activity_add_glucose_value">AddGlucoseValue</string>
    <string name="title_activity_add_bpvalue">AddBPValue</string>
    <string name="title_activity_add_medicaletst">AddMedicaletst</string>
    <string name="title_activity_add_medication">AddMedication</string>
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing…</string>
    <string name="refresh">Refresh…</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_new_profile">NewProfile</string>
    <string name="name">name *</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name</string>
    <string name="dob">date of birth*</string>
    <string name="email">\@email *</string>
    <string name="phone">mobile number</string>
    <string name="location">location</string>
    <string name="organization">organization</string>
    <string-array name="blood_groups">
        <item>Select Blood Group..</item>
        <item>O+</item>
        <item>A+</item>
        <item>B+</item>
        <item>AB+</item>
        <item>O-</item>
        <item>A-</item>
        <item>B-</item>
        <item>AB-</item>
    </string-array>
    <string name="app_id">603777449653645</string>
    <string name="skip">Skip</string>
    <string name="addReminder">Remind Later</string>
    <string name="save">Save</string>
    <string name="title_activity_new_home">NewHome</string>
    <string name="reminder_type_prompt">Type</string>
    <string name="duration_type_prompt">Duration</string>
    <string name="exercise_type_prompt">Exercise</string>
    <string name="enter_time">Time</string>
    <string name="title_activity_delete_medication">Delete Medication</string>
    <string name="title_activity_fbfamily_list">Add Family Member</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="password">#password</string>
    <string name="username">\@email</string>
    <string name="resgiter">Register</string>
    <string name="confirm_password">#password - confirm</string>
    <string name="login_user_name_not_present">need your identity to log you in</string>
    <string name="login_user_password_not_present">need your password to log you in</string>
    <string name="login_user_name_not_email">this doesnt look like an email-id</string>
    <string name="register_user_name_not_present">need your identity to log you in</string>
    <string name="register_user_password_not_present">need your identity to log you in</string>
    <string name="register_user_name_not_email">this doesnt look like an email-id</string>
    <string name="register_confirm_password_not_present">please confirm the password</string>
    <string name="register_passwords_mismatch">buddy! passwords do not match</string>
    <string name="profile_email_not_present">email is a mandatory field to create a new profile</string>
    <string name="profile_email_not_valid">is this really a email-id?</string>
    <string name="profile_first_name_not_present">Name  is mandatory to create a new profile</string>
    <string name="profile_dob_not_present">date of brth is mandatory to create a new profile</string>
    <string name="profile_height_not_present">height is mandatory to create a new profile</string>
    <string name="profile_weight_not_present">weight is mandatory to create a new profile</string>
    <string name="tab_label_goal">Goals</string>
    <string name="tab_label_kids">Kid Tracker</string>
    <string name="tab_label_journal">Journal</string>
    <string name="tab_label_reminder">Reminders</string>
    <string name="tab_label_file">Files</string>
    <string name="tab_label_profiles">Profiles</string>
    <string name="tab_task_screen">Home</string>
    <string name="tab_challenges_and_tracker">Track</string>
    <string name="addgoal">+ Add Goal</string>
    <string name="title_add_goal">Add Goal</string>
    <string name="goal_settings">Goal Settings</string>
    <string name="present_values">Present Data (if you know)</string>
    <string name="fbs">Fasting Blood Sugar</string>
    <string name="rbs">Random Blood Sugar</string>
    <string name="present_fbs_hint">empty stomach</string>
    <string name="present_rbs_hint">1.5-2 hrs after food</string>
    <string name="target_fbs">target fasting blood sugar</string>
    <string name="target_rbs">target random blood sugar</string>
    <string name="present_systolic">systolic pressure</string>
    <string name="present_diastolic">diastolic pressure</string>
    <string name="target_systolic">target systolic pressure</string>
    <string name="target_diastolic">target diastolic pressure</string>
    <string name="present_hdl">hdl</string>
    <string name="present_ldl">ldl</string>
    <string name="present_tryglecerides">tryglecerides</string>
    <string name="total_cholesterol">total : </string>
    <string name="target_hdl">target hdl</string>
    <string name="target_ldl">target ldl</string>
    <string name="target_tryglecerides">target tryglecerides</string>
    <string name="file_title">description of the file</string>
    <string name="profile_height">how tall are you?(cm)*</string>
    <string name="profile_weight">weight (kg)*</string>
    <string name="add_weight">Add</string>
    <string name="title_activity_add_goal_value">Add Value</string>
    <string name="random">random</string>
    <string name="fasting">fasting</string>
    <string name="sp_add">Systolic</string>
    <string name="dp_add">Diastolic</string>
    <string name="pr_add">Pulse Rate</string>
    <string name="hdl_value">HDL</string>
    <string name="ldl_value">LDL</string>
    <string name="tg_value">Triglycerides</string>
    <string name="random_sugar">random sugar value</string>
    <string name="fasting_sugar">fasting sugar value</string>
    <string name="editProfile">Edit Profile</string>
    <string name="target">Target</string>
    <string name="present">Present</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="oldPassword">#old password</string>
    <string name="newPassword">#new password</string>
    <string name="reEnterNewPassword">#confirm new password</string>
    <string name="targetDate">target date</string>
</resources>