<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/old"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/oldPassword"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/newP"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/newPassword"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/new_again"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/reEnterNewPassword"
        android:inputType="textPassword" />
</LinearLayout>