<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:background="#37aa4f">

    <LinearLayout
        android:id="@+id/loginwrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right|top"
        android:gravity="right"
        android:orientation="horizontal">

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/betaimg"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:id="@+id/imageButton"
            android:layout_gravity="center_horizontal|top"
            android:src="@drawable/white_logo_text"
            android:scaleType="fitStart"
            android:baselineAlignBottom="false"
            android:cropToPadding="false" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="20"
                android:id="@+id/user_name"
                android:layout_gravity="center"
                android:hint="@string/username" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="20"
                android:id="@id/user_password"
                android:layout_gravity="center"
                android:hint="@string/password"
                android:password="true" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="20"
                android:id="@id/confirm_user_password"
                android:layout_gravity="center"
                android:hint="@string/confirm_password"
                android:password="true" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/register"
        android:id="@+id/btnRegister"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/cancel"
        android:id="@+id/txtbtnCancel"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:singleLine="false" />

</LinearLayout>
