<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="visible"
        android:id="@+id/section_present"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/present"
            android:id="@+id/textView"
            android:layout_gravity="center"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/add_goal_present_hdl"
            android:hint="@string/hdl_value"
            android:inputType="numberSigned"
            android:layout_height="48dp"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:gravity="center_vertical|center_horizontal"
            android:singleLine="true"
            android:padding="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="" />

        <EditText
            android:id="@+id/add_goal_present_ldl"
            android:hint="@string/ldl_value"
            android:inputType="numberSigned"
            android:layout_height="48dp"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:gravity="center_vertical|center_horizontal"
            android:singleLine="true"
            android:padding="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/add_goal_present_try"
            android:hint="@string/tg_value"
            android:inputType="numberSigned"
            android:layout_height="48dp"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:gravity="center_vertical|center_horizontal"
            android:singleLine="true"
            android:padding="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/add_goal_present_total"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_height="48dp"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:gravity="center_vertical|center_horizontal"
            android:singleLine="true"
            android:padding="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/total_cholesterol"
            android:visibility="gone" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="visible"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/target"
            android:id="@+id/textView2"
            android:layout_gravity="center"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/add_goal_target_hdl"
            android:hint="@string/hdl_value"
            android:inputType="numberSigned"
            android:layout_height="48dp"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:gravity="center_vertical|center_horizontal"
            android:singleLine="true"
            android:padding="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/add_goal_target_ldl"
            android:hint="@string/ldl_value"
            android:inputType="numberSigned"
            android:layout_height="48dp"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:gravity="center_vertical|center_horizontal"
            android:singleLine="true"
            android:padding="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textIsSelectable="false" />

        <EditText
            android:id="@+id/add_goal_target_try"
            android:hint="@string/tg_value"
            android:inputType="numberSigned"
            android:layout_height="48dp"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:gravity="center_vertical|center_horizontal"
            android:singleLine="true"
            android:padding="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/add_goal_target_total"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_height="48dp"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:gravity="center_vertical|center_horizontal"
            android:singleLine="true"
            android:padding="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/total_cholesterol"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>
<EditText
    android:id="@+id/add_goal_target_date"
    android:hint="@string/targetDate"
    android:inputType="date"
    android:layout_height="48dp"
    android:layout_width="match_parent"
    android:textSize="18sp"
    android:gravity="center_vertical|center_horizontal"
    android:singleLine="true"
    android:padding="5dp"
    android:layout_marginTop="20dp"
    android:layout_gravity="center" />

</LinearLayout>
