<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/sp_add"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/input_systolic_pressure"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:inputType="numberDecimal"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/dp_add"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/input_diastolic_pressure"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:inputType="numberDecimal"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/pr_add"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/input_pulse_rate"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:inputType="numberDecimal"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>
</LinearLayout>